[package]
name = "set4"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3

[dependencies]
aesni = { version = "0.6.0", features = ["nocheck"] }
arrayref = "0.3.6"
block-cipher-trait = "0.6.2"
base64 = "0.11.0"
rand = "0.7.3"
once_cell = "1.3.1"
constant_time_eq = "0.1.5"
