[package]
name = "set4"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3

[dependencies]
aes = "0.7.5"
arrayref = "0.3.6"
base64 = "0.11.0"
cipher = "0.3.0"
rand = "0.7.3"
once_cell = "1.3.1"
constant_time_eq = "0.1.5"

# for md4
digest = "0.8"
block-buffer = "0.7"
fake-simd = "0.1"
opaque-debug = "0.2"
