[package]
name = "set5"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3

[dependencies]
aesni = { version = "0.6.0", features = ["nocheck"] }
base64 = "0.11.0"
rand = "0.5" # version 0.2 of num-bigint uses 0.5
once_cell = "1.3.1"
hex = "0.4.1"
num-bigint = { version = "0.2", features = ["rand"] }
arrayref = "0.3.6"
block-cipher-trait = "0.6.2"
blake3 = "0.2.1"
