[package]
name = "set5"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 3

[dependencies]
aes = "0.7.5"
arrayref = "0.3.6"
base64 = "0.11.0"
blake3 = "0.2.1"
cipher = "0.3.0"
hex = "0.4.1"
once_cell = "1.3.1"
num-bigint = { version = "0.2", features = ["rand"] }
rand = "0.5" # version 0.2 of num-bigint uses 0.5
